--- a/app/src/main/res/layout/activity_notice_exam_cell.xml
+++ b/app/src/main/res/layout/activity_notice_exam_cell.xml
@@ -53,39 +53,43 @@
             android:id="@+id/tvExamSem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select Semester :"
+            android:textSize="17sp"
+            android:text="Click here to select Semester :"
             android:layout_marginTop="15dp"
             android:layout_below="@id/tvExamDate"/>
 
-        <Spinner
-            android:id="@+id/spExamSem"
+        <TextView
+            android:id="@+id/tvExamSemData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:entries="@array/semester"
+            android:textSize="20sp"
+            android:text="Selected Semester"
+            android:layout_marginTop="15dp"
             android:layout_below="@id/tvExamSem"/>
 
         <TextView
             android:id="@+id/tvExamDept"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select Department"
+            android:textSize="17sp"
+            android:text="Click here to select Department"
             android:layout_marginTop="20dp"
-            android:layout_below="@id/spExamSem"/>
+            android:layout_below="@id/tvExamSemData"/>
 
-        <Spinner
-            android:id="@+id/spExamDept"
+        <TextView
+            android:id="@+id/tvExamDeptData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Selected Department"
             android:layout_marginTop="20dp"
-            android:entries="@array/department"
             android:layout_below="@id/tvExamDept"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_below="@id/spExamDept"
+            android:layout_below="@id/tvExamDeptData"
             android:id="@+id/d">
 
             <com.google.android.material.textfield.TextInputEditText
