--- a/app/src/main/res/layout/activity_notice_sports.xml
+++ b/app/src/main/res/layout/activity_notice_sports.xml
@@ -74,39 +74,43 @@
             android:id="@+id/tvSportsSem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select Semester :"
+            android:textSize="17sp"
+            android:text="Click here to select Semester :"
             android:layout_marginTop="15dp"
             android:layout_below="@id/tvSportsTime"/>
 
-        <Spinner
-            android:id="@+id/spSportsSem"
+        <TextView
+            android:id="@+id/tvSportsSemData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:entries="@array/semester"
+            android:textSize="20sp"
+            android:text="Selected Semester"
+            android:layout_marginTop="15dp"
             android:layout_below="@id/tvSportsSem"/>
 
         <TextView
             android:id="@+id/tvSportsDept"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Select Department"
+            android:textSize="17sp"
+            android:text="Click here to select Department"
             android:layout_marginTop="20dp"
-            android:layout_below="@id/spSportsSem"/>
+            android:layout_below="@id/tvSportsSemData"/>
 
-        <Spinner
-            android:id="@+id/spSportsDept"
+        <TextView
+            android:id="@+id/tvSportsDeptData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:text="Selected Department"
             android:layout_marginTop="20dp"
-            android:entries="@array/department"
             android:layout_below="@id/tvSportsDept"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_below="@id/spSportsDept"
+            android:layout_below="@id/tvSportsDeptData"
             android:id="@+id/h">
 
             <com.google.android.material.textfield.TextInputEditText
