--- a/app/src/main/res/layout/activity_notice_edit.xml
+++ b/app/src/main/res/layout/activity_notice_edit.xml
@@ -61,7 +61,7 @@
             android:layout_height="30dp"
             android:layout_below="@id/editTitle"
             android:layout_marginTop="20dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentEnd="true"/>
 
         <TextView
             android:id="@+id/tvEditNoticeDate"
@@ -70,7 +70,7 @@
             android:text="Select Date"
             android:layout_marginTop="25dp"
             android:textSize="20sp"
-            android:layout_toLeftOf="@id/ibEditNoticeDate"
+            android:layout_toStartOf="@id/ibEditNoticeDate"
             android:layout_below="@id/editTitle"/>
 
         <ImageButton
@@ -79,7 +79,7 @@
             android:layout_height="30dp"
             android:layout_below="@id/tvEditNoticeDate"
             android:layout_marginTop="20dp"
-            android:layout_alignParentRight="true"/>
+            android:layout_alignParentEnd="true"/>
 
         <TextView
             android:id="@+id/tvEditNoticeTime"
@@ -88,7 +88,7 @@
             android:text="Select Time"
             android:layout_marginTop="20dp"
             android:textSize="20sp"
-            android:layout_toLeftOf="@id/ibEditNoticeTime"
+            android:layout_toStartOf="@id/ibEditNoticeTime"
             android:layout_below="@id/tvEditNoticeDate"/>
 
         <TextView
@@ -99,13 +99,70 @@
             android:layout_marginTop="15dp"
             android:layout_below="@id/tvEditNoticeTime"/>
 
-        <Spinner
-            android:id="@+id/spEditNoticeSem"
-            android:layout_width="match_parent"
+        <androidx.gridlayout.widget.GridLayout
+            android:id="@+id/grid_sem"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:entries="@array/semester"
-            android:layout_below="@id/tvEditNoticeSem"/>
+            app:columnCount="2"
+            app:rowCount="4"
+            android:layout_below="@id/tvEditNoticeSem">
+
+            <CheckBox
+                android:id="@+id/cb1"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester I"/>
+
+            <CheckBox
+                android:id="@+id/cb2"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester II"/>
+
+            <CheckBox
+                android:id="@+id/cb3"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester III"/>
+
+            <CheckBox
+                android:id="@+id/cb4"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester IV"/>
+
+            <CheckBox
+                android:id="@+id/cb5"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester V"/>
+
+            <CheckBox
+                android:id="@+id/cb6"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester VI"/>
+
+            <CheckBox
+                android:id="@+id/cb7"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester VII"/>
+
+            <CheckBox
+                android:id="@+id/cb8"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Semester VIII"/>
+        </androidx.gridlayout.widget.GridLayout>
 
         <TextView
             android:id="@+id/tvEditNoticeDept"
@@ -113,21 +170,57 @@
             android:layout_height="wrap_content"
             android:text="Select Department"
             android:layout_marginTop="20dp"
-            android:layout_below="@id/spEditNoticeSem"/>
+            android:layout_below="@id/grid_sem"/>
 
-        <Spinner
-            android:id="@+id/spEditNoticeDept"
-            android:layout_width="match_parent"
+        <androidx.gridlayout.widget.GridLayout
+            android:id="@+id/grid_dept"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:entries="@array/department"
-            android:layout_below="@id/tvEditNoticeDept"/>
+            app:columnCount="1"
+            app:rowCount="5"
+            android:layout_below="@+id/tvEditNoticeDept">
+
+            <CheckBox
+                android:id="@+id/cbCS"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CS : Computer Science"/>
+
+            <CheckBox
+                android:id="@+id/cbIT"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="IT : Information Technology"/>
+
+            <CheckBox
+                android:id="@+id/cbEXTC"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="EXTC : Electronics and Telecommunication"/>
+
+            <CheckBox
+                android:id="@+id/cbETRX"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ETRX : Electronics"/>
+
+            <CheckBox
+                android:id="@+id/cbAI_DS"
+                android:layout_margin="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="AI-DS : Artificial Intelligence And Data Science"/>
+        </androidx.gridlayout.widget.GridLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:layout_below="@id/spEditNoticeDept"
+            android:layout_below="@id/grid_dept"
             android:id="@+id/editSubject">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -158,6 +251,5 @@
             android:text="Update Notice"
             android:layout_centerInParent="true"
             android:layout_below="@+id/editNotice"/>
-
     </RelativeLayout>
 </ScrollView>
